force-app/main/default/objects/Payroll__c/Payroll__c.object-meta.xml
<CustomObject>
  <label>Payroll</label>
  <pluralLabel>Payrolls</pluralLabel>
  <nameField>
    <label>PAY Number</label>
    <type>AutoNumber</type>
    <displayFormat>PAY-{0000}</displayFormat>
  </nameField>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>