force-app/main/default/objects/Payroll__c/fields/Assignment__c.field-meta.xml
<CustomField>
  <fullName>Assignment__c</fullName>
  <label>Assignment</label>
  <type>MasterDetail</type>
  <referenceTo>Assignment__c</referenceTo>
  <relationshipName>Payrolls</relationshipName>
  <relationshipLabel>Assignment</relationshipLabel>
  <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>