force-app/main/default/objects/Payroll__c/fields/Pay_Period_Start__c.field-meta.xml
<CustomField>
  <fullName>Pay_Period_Start__c</fullName>
  <label>Pay Period Start</label>
  <type>Date</type>
  <required>true</required>
</CustomField>