force-app/main/default/objects/Payroll__c/fields/Status__c.field-meta.xml
<CustomField>
  <fullName>Status__c</fullName>
  <label>Status</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
    <value>
      <fullName>Draft</fullName>
    </value>
    <value>
      <fullName>Posted</fullName>
    </value>
    <value>
      <fullName>Paid</fullName>
    </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>